# sigma_rule_tester

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/.cargo/: config.toml
