[package]
name = "sigma_rule_tester"
description = "Run Sigma rules against any json log."
version = "0.2.0"
edition = "2021"
authors = ["Brian Kellogg <theflakes@gmail.com>"]
license = "MIT"
repository = "https://github.com/theflakes/sigma_rule_tester"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sigma-rust = { path = "../sigma-rust" }
walkdir = "*"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = "s"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
strip = "symbols"